# YSDA_CryptographyCourse

./: .gitignore  CMakeLists.txt  README.md  algorithm.hpp  main.cpp  test.cpp
helpers/: beautify_hex.py  beautify_table.py
include/: algorithm.hpp  context.hpp  feistel_network.hpp  galois_field.hpp  linear_transform.hpp  non_linear_substitution.hpp
profiler_results/: 1_st_level_optimization.txt  2_nd_level_optimization.txt  no_optimization.txt
src/: context.cpp  feistel_network.cpp  galois_field.cpp  linear_transform.cpp
